[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.37.0",
    "cmake>=3.15.0",
    "pybind11>=2.6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "catzilla"
version = "0.2.0"
description = "Ultra-fast Python web framework with C-accelerated routing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rezwan Ahmed Sami", email = "samiahmed0f0@gmail.com"}
]
maintainers = [
    {name = "Rezwan Ahmed Sami", email = "samiahmed0f0@gmail.com"}
]
keywords = [
    "web-framework",
    "fast",
    "performance",
    "c-extension",
    "routing",
    "http",
    "asgi",
    "web-server",
    "high-performance",
    "micro-framework"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=2.20.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0"
]
benchmarks = [
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "flask>=2.3.0",
    "django>=4.2.0",
    "gunicorn>=21.2.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=3.12.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "kiwisolver>=1.4.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.20.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/rezwanahmedsami/catzilla"
Documentation = "https://catzilla.rezwanahmedsami.com/"
Repository = "https://github.com/rezwanahmedsami/catzilla"
"Bug Tracker" = "https://github.com/rezwanahmedsami/catzilla/issues"
"Source Code" = "https://github.com/rezwanahmedsami/catzilla"
Changelog = "https://github.com/rezwanahmedsami/catzilla/blob/main/CHANGELOG.md"
"Performance Report" = "https://github.com/rezwanahmedsami/catzilla/blob/main/PERFORMANCE_REPORT_v0.1.0.md"

[project.scripts]
catzilla-server = "catzilla.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
catzilla = [
    "*.so",
    "*.dll",
    "*.dylib",
    "py.typed"
]

[tool.setuptools.exclude-package-data]
"*" = [
    "tests*",
    "benchmarks*",
    "examples*"
]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Exclude build artifacts
    build/
    | dist/
    | \.eggs/
    | \.git/
    | \.tox/
    | venv/
    | _build/
    | buck-out/
    | __pycache__/
)/
'''

[tool.mypy]
python_version = "0.2.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "catzilla._catzilla",
    "catzilla.tests.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-v",
    "--asyncio-mode=auto"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmark tests",
    "asyncio: marks tests as async tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]

[tool.coverage.run]
source = ["python/catzilla"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "venv",
    ".venv",
    ".tox"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# cibuildwheel configuration for professional wheel building
# Platform-specific jemalloc support:
# - Linux: jemalloc enabled (static linking)
# - macOS: jemalloc enabled (static linking)
# - Windows: jemalloc disabled (uses standard allocator)
[tool.cibuildwheel]
# Build for Python 3.9-3.13 across all platforms
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip problematic builds
skip = [
    "*-win32",           # Skip 32-bit Windows
    "*-manylinux_i686",  # Skip 32-bit Linux
    "*-manylinux_aarch64", # Skip ARM64 Linux (requires QEMU emulation on x86_64 runners)
    "pp*",               # Skip PyPy builds
    "*-musllinux_*",     # Skip musl Linux for now (can enable later)
]

# Build settings
build-frontend = "build"

# Install build dependencies and build jemalloc (except Windows)
before-build = [
    "git submodule update --init --recursive",
    "bash scripts/build_jemalloc.sh || true",
    "pip install cmake pybind11"
]

# Test settings - verify jemalloc integration
test-requires = "pytest"
test-command = "python -c \"import catzilla; app = catzilla.Catzilla(); print('Catzilla wheel test passed')\""

# Environment variables for all platforms - jemalloc enabled by default (overridden per platform)
environment = { CMAKE_BUILD_TYPE = "Release" }

# Architecture selection for different platforms
[tool.cibuildwheel.linux]
archs = ["x86_64"]  # Removed aarch64 to prevent stuck builds on x86_64 runners
# Linux-specific settings for manylinux containers
before-all = [
    # Initialize git submodules for jemalloc
    "git submodule update --init --recursive",
    # Try to use vault.centos.org mirrors if standard ones fail
    "yum-config-manager --add-repo http://vault.centos.org/centos/7/os/x86_64/ || true",
    "yum-config-manager --add-repo http://vault.centos.org/centos/7/updates/x86_64/ || true",
    "yum clean all || true",
    # Install build dependencies with fallback to apt (for Ubuntu-based images)
    "yum install -y cmake3 gcc gcc-c++ make python3-devel autoconf automake libtool --skip-broken || (apt-get update && apt-get install -y cmake build-essential python3-dev autoconf automake libtool)",
    # Create cmake symlink for compatibility
    "ln -sf /usr/bin/cmake3 /usr/bin/cmake || true",
]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
# Linux test command with UTF-8 encoding
test-command = "python -c \"import catzilla; app = catzilla.Catzilla(); print('✅ Catzilla wheel test passed')\""

[tool.cibuildwheel.macos]
# Build for both Intel and Apple Silicon - but each separately to avoid cross-compilation issues
archs = ["x86_64", "arm64"]
# macOS-specific settings
before-all = [
    "git submodule update --init --recursive",
    "if brew list cmake &>/dev/null; then echo 'cmake already installed, checking version...' && cmake --version; else brew uninstall cmake 2>/dev/null || true && brew install cmake; fi",
    "brew install autoconf automake libtool"
]
# Skip architecture requirement in delocate to avoid Python library conflicts
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"
# macOS test command with UTF-8 support
test-command = "python -c \"import catzilla; app = catzilla.Catzilla(); print('✅ Catzilla wheel test passed')\""

[tool.cibuildwheel.windows]
archs = ["AMD64"]
# Windows-specific settings - Skip jemalloc on Windows
before-all = [
    "git submodule update --init --recursive",
    "choco install cmake --installargs='ADD_CMAKE_TO_PATH=System'"
]
# Skip jemalloc build on Windows
before-build = [
    "pip install cmake pybind11"
]
# Windows-specific test command without Unicode characters
test-command = "python -c \"import catzilla; app = catzilla.Catzilla(); print('Catzilla wheel test passed successfully')\""

[tool.cibuildwheel.linux.environment]
CMAKE_ARGS = "-DCMAKE_BUILD_TYPE=Release -DCATZILLA_USE_JEMALLOC=1"
CATZILLA_USE_JEMALLOC = "1"

[tool.cibuildwheel.macos.environment]
CMAKE_ARGS = "-DCMAKE_BUILD_TYPE=Release -DCMAKE_OSX_DEPLOYMENT_TARGET=10.15 -DCATZILLA_USE_JEMALLOC=1"
MACOSX_DEPLOYMENT_TARGET = "10.15"
CATZILLA_USE_JEMALLOC = "1"
# Set platform name to help CMake detect target architecture
PLAT_NAME = "{wheel}"

[tool.cibuildwheel.windows.environment]
CMAKE_ARGS = "-DCMAKE_BUILD_TYPE=Release -DCATZILLA_USE_JEMALLOC=0"
CATZILLA_USE_JEMALLOC = "0"
